up&down model & data(all) left&right model & data (details)

--- a/pro/src/pug/data.pug
+++ b/pro/src/pug/data.pug
@@ -331,3 +331,240 @@
         classes:{partInList:'part-tech-ser', icon:'icon-kuapingtai orange-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
         datas:{partInList:'', iconDesc:{iTitle:'跨平台', number:''}, title:'', subTitle:'', info:'', desc:['跨平台运行','可重复调用','减少工作量'], other:''}
     }
+
+
+    //- 技术研发 - Android -优势
+-
+    var list40 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'01'}, title:'用户量最多', subTitle:'THE MOST USERS', info:'', desc:['全球使用量最多','发行量持续增长'], other:''}
+    }
+    var list41 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'02'}, title:'推广相对容易', subTitle:'EASY SEO', info:'', desc:['开放系统','开发自由度高','更接近你所想'], other:''}
+    }
+    var list42 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'03'}, title:'系统开放性高', subTitle:' HIGHLY OPENING SYSTEM', info:'', desc:['开发技术成熟','开发速度快'], other:''}
+    }
+
+//- 技术研发  Android - 服务
+-
+  var list43 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-UIsheji2 ', iconDesc:{style:'',iTitle:'iTitle-tech-ser ', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'UI设计', number:''}, title:'', subTitle:'', info:'', desc:['原型设计','交互逻辑','界面设计'], other:''}
+    }
+    var list44 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-yanfa darkGreen-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'研发', number:''}, title:'', subTitle:'', info:'', desc:['原生程序','程序优化','内存控制'], other:''}
+    }
+    var list45 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-ceshi red-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'测试', number:''}, title:'', subTitle:'', info:'', desc:['分辨率测试','硬件匹配','逻辑检测'], other:''}
+    }
+    var list46 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-tuiguang green-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'推广', number:''}, title:'', subTitle:'', info:'', desc:['推广方案','运营策划','快速发布'], other:''}
+    }
+    var list47 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-fuwu orange-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'服务', number:''}, title:'', subTitle:'', info:'', desc:['免费Bug修复','后期系统优化','完美监控'], other:''}
+    }
+
+    //- 技术研发 - IOS -优势
+-
+    var list50 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'01'}, title:'营收更容易', subTitle:'EASY REVENUES ', info:'', desc:['用户更愿意付费','支付方式便捷'], other:''}
+    }
+    var list51 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'02'}, title:'应用发布统一且唯一', subTitle:' UNIFIED RELEAES ', info:'', desc:['唯一app','store商店','方便搜索应用','平台维护费用低'], other:''}
+    }
+    var list52 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'03'}, title:'系统机型少、适配最优', subTitle:' HIGHLY ADAPTIVE ', info:'', desc:['系统机型单一 ','系统规范明确','开发成本低'], other:''}
+    }
+
+//- 技术研发  IOS - 服务
+-
+  var list53 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-UIsheji2 ', iconDesc:{style:'',iTitle:'iTitle-tech-ser ', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'UI设计', number:''}, title:'', subTitle:'', info:'', desc:['原型设计','交互逻辑','界面设计'], other:''}
+    }
+    var list54 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-yanfa darkGreen-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'研发', number:''}, title:'', subTitle:'', info:'', desc:['原生程序','程序优化','内存控制'], other:''}
+    }
+    var list55 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-ceshi red-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'测试', number:''}, title:'', subTitle:'', info:'', desc:['分辨率测试','硬件匹配','逻辑检测'], other:''}
+    }
+    var list56 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-tuiguang green-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'推广', number:''}, title:'', subTitle:'', info:'', desc:['推广方案','运营策划','快速发布'], other:''}
+    }
+    var list57 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-fuwu orange-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'服务', number:''}, title:'', subTitle:'', info:'', desc:['免费Bug修复','后期系统优化','完美监控'], other:''}
+    }
+
+
+
+    //- 技术研发 - 微信开发 -优势
+-
+    var list60 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'01'}, title:'资讯展示', subTitle:'MOBILE EXPERIENCE ', info:'', desc:['官网设置与内容推送','随时发布资讯动态','形象塑造和APP推广容易'], other:''}
+    }
+    var list61 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'02'}, title:'服务咨询', subTitle:' PROMOTION OF LOW COST', info:'', desc:['用户群体庞大','自定义微信菜单','信息反馈与分析方便'], other:''}
+    }
+    var list62 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'03'}, title:'消费交易', subTitle:'SPEED IS FAST ', info:'', desc:['快速打造微商城与官网','企业品牌延伸方便','建立泛用户体系容易'], other:''}
+    }
+
+//- 技术研发  微信开发 - 服务
+-
+  var list63 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-weiwangzhan ', iconDesc:{style:'',iTitle:'iTitle-tech-ser ', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'微网站', number:''}, title:'', subTitle:'', info:'', desc:['浏览器直接访问','无需store审核','更像APP体验'], other:''}
+    }
+    var list64 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-weishangcheng darkGreen-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'微商城', number:''}, title:'', subTitle:'', info:'', desc:['内容实时更新','审核周期短','发布后无需维护'], other:''}
+    }
+    var list65 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-weiyingxiao red-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'微营销', number:''}, title:'', subTitle:'', info:'', desc:['离线使用‘','更新下载量少'], other:''}
+    }
+    var list66 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-weidingzhi green-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'微定制', number:''}, title:'', subTitle:'', info:'', desc:['代码更安全','运行更流畅'], other:''}
+    }
+    var list67 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-weishequ orange-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'微社区 ', number:''}, title:'', subTitle:'', info:'', desc:['保持用户黏性','促进平台活跃度','提高品牌忠诚度'], other:''}
+    }
+
+
+     //- 技术研发 - 微信小程序 -优势
+-
+    var list70 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'01'}, title:'用户基数大', subTitle:'THE MOST USERS ', info:'', desc:['利用微信庞大用户基数','营销推广成本最小化'], other:''}
+    }
+    var list71 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'02'}, title:'无需安装', subTitle:' WITHOUT INSTALLATION', info:'', desc:['无需安装即开即用','UI操作统一 ','用户体验流畅'], other:''}
+    }
+    var list72 = {
+        classes:{partInList:'part-tech-adv', icon:'', iconDesc:{style:'',iTitle:'', number:'icon-number-tech-adv'}, title:'list-title-tech-adv', subTitle:'list-sub-title-tech-adv', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:'03'}, title:'灵活配置', subTitle:'FLEXIBLE CONFIGURATION ', info:'', desc:['更低廉的开发成本','更敏捷的开发流程','更高的用户兼容性'], other:''}
+    }
+
+//- 技术研发  微信小程序 - 服务
+-
+  var list73 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-goutong ', iconDesc:{style:'',iTitle:'iTitle-tech-ser ', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'需求沟通', number:''}, title:'', subTitle:'', info:'', desc:['功能确认','原型设计'], other:''}
+    }
+    var list74 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-yanfa darkGreen-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'研发', number:''}, title:'', subTitle:'', info:'', desc:['云端资源分配','程序开发','运行优化'], other:''}
+    }
+    var list75 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-ceshi red-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'测试', number:''}, title:'', subTitle:'', info:'', desc:['逻辑检测','小规模用户测试','意见反馈'], other:''}
+    }
+    var list76 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-tuiguang green-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'推广', number:''}, title:'', subTitle:'', info:'', desc:['推广方案','运营策划','活动创意'], other:''}
+    }
+    var list77 = {
+        classes:{partInList:'part-tech-ser', icon:'icon-fuwu orange-c', iconDesc:{style:'',iTitle:'iTitle-tech-ser', number:''}, title:'', subTitle:'', info:'', desc:'desc-tech', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'服务', number:''}, title:'', subTitle:'', info:'', desc:['免费Bug修复','后期系统优化','完美监控'], other:''}
+    }
+
+
+
+
+//-求贤若渴
+-
+    var list80 = {
+        classes:{partInList:'part-employ bg-grey', icon:'icon-employ-bg-grey', iconDesc:{style:'',iTitle:'', number:''}, title:'title-employ list-title-grey-border', subTitle:'', info:'', desc:'desc-employ', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'产品实习生', subTitle:'', info:'', desc:['需求挖掘','产品设计','交互设计','项目跟进'], other:''}
+    }
+        var list81 = {
+        classes:{partInList:'part-employ bg-green', icon:'icon-employ-bg-green', iconDesc:{style:'',iTitle:'', number:''}, title:'title-employ list-title-green-border', subTitle:'', info:'', desc:'desc-employ', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'iSO工程师', subTitle:'', info:'', desc:['软件编码','业务逻辑实现','程序测试'], other:''}
+    }
+
+    var list82 = {
+        classes:{partInList:'part-employ bg-red', icon:'icon-employ-bg-red', iconDesc:{style:'',iTitle:'', number:''}, title:'title-employ list-title-red-border', subTitle:'', info:'', desc:'desc-employ', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'安卓工程师', subTitle:'', info:'', desc:['软件编码','业务逻辑实现','程序测试'], other:''}
+    }
+
+    var list83 = {
+        classes:{partInList:'part-employ bg-blue', icon:'icon-employ-bg-blue', iconDesc:{style:'',iTitle:'', number:''}, title:'title-employ list-title-blue-border', subTitle:'', info:'', desc:'desc-employ', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'前端工程师', subTitle:'', info:'', desc:['页面制作','脚本程序编写','优化修改页面'], other:''}
+    }
+
+
+//-技术研发 - 服务简介
+-
+    var list90 = {
+        classes:{partInList:'part-tech-serv bg-profession', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-tech-serv', subTitle:'', info:'info-tech-serv', desc:'', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'专业', subTitle:'', info:'技术开发，不止步于技术。拒绝成为APP流水工厂，每一次研发，都立足用户和市场，充分考虑后续融资与营销需求。过硬的技术，只有匹配', desc:[], other:''}
+    }
+
+    var list91 = {
+        classes:{partInList:'part-tech-serv bg-concentrate', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-tech-serv', subTitle:'', info:'info-tech-serv', desc:'', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'专注', subTitle:'', info:'老道默契的团队，创新型学习型企业文化，一“老”一“新”，10余年专注于互联网产品，紧跟互联网快速迭代的浪潮。拒绝童子军，把专业', desc:[], other:''}
+    }
+
+    var list92 = {
+        classes:{partInList:'part-tech-serv bg-effeciency', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-tech-serv', subTitle:'', info:'info-tech-serv', desc:'', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'效率', subTitle:'', info:'天下武功，唯快不破。缩短开发周期，准确判断产品窗口期，快速响应需求，永远快人一步，助你抢占市场先机。 ', desc:[], other:''}
+    }
+
+    var list93 = {
+        classes:{partInList:'part-tech-serv bg-beaty', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-tech-serv', subTitle:'', info:'info-tech-serv', desc:'', other:''},
+        datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'臻美', subTitle:'', info:'至于至善，追求完美。“挑剔’在我们这里，是褒义词。全程“保姆式”开发，以工匠精神为客户深究每一个环节。在看不到的也要做到精致，', desc:[], other:''}
+    }
+
+
+//-左右布局
+//-详细流程
+-
+    var  list100 = {
+        left:{
+            classes:{partInList:'part-details', icon:'icon-jishuhehuoren2', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        middle:{
+            classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'前期沟通', number:'01'}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        right:{
+            classes:{partInList:'part-details bg-orange', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details', subTitle:'', info:'', desc:'desc-details', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'沟通碰撞：“不只是接受” ', subTitle:'', info:'', desc:['· 需求调研 方案制作','· 需求确认 签订合约'], other:''}
+        }
+    }
+
+    var  list101 = {
+        right:{
+            classes:{partInList:'part-details', icon:'icon-jishuhehuoren2', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        middle:{
+            classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'前期沟通', number:'01'}, title:'', subTitle:'', info:'', desc:[], other:''}
+        },
+        left:{
+            classes:{partInList:'part-details bg-orange', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details', subTitle:'', info:'', desc:'desc-details', other:''},
+            datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'沟通碰撞：“不只是接受” ', subTitle:'', info:'', desc:['· 需求调研 方案制作','· 需求确认 签订合约'], other:''}
+        }
+    }
