--- a/pro/src/pug/index.pug
+++ b/pro/src/pug/index.pug
@@ -66,6 +66,83 @@ body
         +tplListA(list36)
         +tplListA(line)
         +tplListA(list37)
+    div.part
+        +tplListA(list40)
+        +tplListA(list41)
+        +tplListA(list42)
+    div.part
+        +tplListA(list43)
+        +tplListA(line)
+        +tplListA(list44)
+        +tplListA(line)
+        +tplListA(list45)
+        +tplListA(line)
+        +tplListA(list46)
+        +tplListA(line)
+        +tplListA(list47)
+    div.part
+        +tplListA(list50)
+        +tplListA(list51)
+        +tplListA(list52)
+    div.part
+        +tplListA(list53)
+        +tplListA(line)
+        +tplListA(list54)
+        +tplListA(line)
+        +tplListA(list55)
+        +tplListA(line)
+        +tplListA(list56)
+        +tplListA(line)
+        +tplListA(list57)
+
+    div.part
+        +tplListA(list60)
+        +tplListA(list61)
+        +tplListA(list62)
+    div.part
+        +tplListA(list63)
+        +tplListA(line)
+        +tplListA(list64)
+        +tplListA(line)
+        +tplListA(list65)
+        +tplListA(line)
+        +tplListA(list66)
+        +tplListA(line)
+        +tplListA(list67)
+
+    div.part
+        +tplListA(list70)
+        +tplListA(list71)
+        +tplListA(list72)
+    div.part
+        +tplListA(list73)
+        +tplListA(line)
+        +tplListA(list74)
+        +tplListA(line)
+        +tplListA(list75)
+        +tplListA(line)
+        +tplListA(list76)
+        +tplListA(line)
+        +tplListA(list77)
+
+    div.part
+        +tplListA(list80)
+        +tplListA(list81)
+        +tplListA(list82)
+        +tplListA(list83)
+    div.part
+        +tplListA(list90)
+        +tplListA(list91)
+        +tplListA(list92)
+        +tplListA(list93)
+
+    div.part
+        +tplListB(list100)
+        +tplListB(list101)
+        
+
+
+
 
 
 
