left&right model & data (details)

--- a/pro/src/pug/data.pug
+++ b/pro/src/pug/data.pug
@@ -549,22 +549,22 @@
             datas:{partInList:'', iconDesc:{iTitle:'前期沟通', number:'01'}, title:'', subTitle:'', info:'', desc:[], other:''}
         },
         right:{
-            classes:{partInList:'part-details bg-orange', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details', subTitle:'', info:'', desc:'desc-details', other:''},
+            classes:{partInList:'part-details bg-orange bg-setting bg-r', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details', subTitle:'', info:'', desc:'desc-details', other:''},
             datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'沟通碰撞：“不只是接受” ', subTitle:'', info:'', desc:['· 需求调研 方案制作','· 需求确认 签订合约'], other:''}
         }
     }
 
     var  list101 = {
         right:{
-            classes:{partInList:'part-details', icon:'icon-jishuhehuoren2', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
+            classes:{partInList:'part-details', icon:'icon-jishuhehuoren2 icon-r', iconDesc:{style:'',iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:'', other:''},
             datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'', subTitle:'', info:'', desc:[], other:''}
         },
         middle:{
-            classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
+            classes:{partInList:'part-details', icon:'', iconDesc:{style:'icon-details-bg icon-details-bg-r',iTitle:'iTitle-details', number:'icon-number-details'}, title:'', subTitle:'', info:'', desc:'', other:''},
             datas:{partInList:'', iconDesc:{iTitle:'前期沟通', number:'01'}, title:'', subTitle:'', info:'', desc:[], other:''}
         },
         left:{
-            classes:{partInList:'part-details bg-orange', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details', subTitle:'', info:'', desc:'desc-details', other:''},
+            classes:{partInList:'part-details bg-orange bg-setting bg-l ', icon:'', iconDesc:{style:'',iTitle:'', number:''}, title:'list-title-details word-l', subTitle:'', info:'', desc:'desc-details word-l', other:''},
             datas:{partInList:'', iconDesc:{iTitle:'', number:''}, title:'沟通碰撞：“不只是接受” ', subTitle:'', info:'', desc:['· 需求调研 方案制作','· 需求确认 签订合约'], other:''}
         }
     }
