--- a/pro/src/sass/index_style.scss
+++ b/pro/src/sass/index_style.scss
@@ -934,8 +934,7 @@
     }
 }
 .icon-details-bg {
-    margin-right: 43px;
-    border: 5px initial #Cac4c1;
+    margin-right: 25px;
     border-radius: 100px;
     width: 170px;
     height: 170px;
@@ -944,9 +943,13 @@
 
     -webkit-box-shadow:-9px 10px 14px #9C9C9C; 
     -moz-box-shadow:-9px 10px 14px #9C9C9C; 
-    box-shadow:-9px 10px 14px #9C9C9C;
+     box-shadow:-9px 10px 14px #9C9C9C;
  
 }
+.icon-details-bg-r {
+    margin-left: -140px;
+}
+
 .iTitle-details {
     margin-top: -10px;
 
@@ -955,7 +958,6 @@
     color: #535454;
 }
 .icon-number-details {
-    margin-left: -23px;
     padding-top: 15px;
 
     font-family: cursive;
@@ -964,9 +966,14 @@
     
     color: #E05127;
 }
-.bg-orange {
+.bg-r {
     margin-left: 195px;
-    border: 2px solid red;
+}
+.bg-l {
+
+}
+.bg-setting {
+    
     border-radius: 100px;
     width: 470px;
     height: 170px;
@@ -974,21 +981,31 @@
     text-align: left;
 
     color: white;
-    background-color: #e56f2b;
     
     -webkit-box-shadow:-9px 10px 14px #9C9C9C; 
     -moz-box-shadow:-9px 10px 14px #9C9C9C; 
     box-shadow:-9px 10px 14px #9C9C9C;
 }
+.bg-orange {
+    background-color: #e56f2b;
+}
 .list-title-details {
-    margin-top: 30px;
-
     font-size: 20px;
-    line-height: 30px;
+    line-height: 72px;
 }
 .desc-details {
     margin-top: 3px;
 
     font-size: 16px;
     line-height: 22px;
+}
+
+.icon-r {/* 图标在右时的往下移一点 */
+    padding-top: 43px
+}
+.icon-r:before {
+    margin-left: -332px;
+}
+.word-l {/* 文字在左边的时候 */
+    padding-left: 70px;
 }
